; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/binutils/extr_readelf.c_print_dynamic_flags.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/binutils/extr_readelf.c_print_dynamic_flags.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stdout = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [7 x i8] c"ORIGIN\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"SYMBOLIC\00", align 1
@.str.2 = private unnamed_addr constant [8 x i8] c"TEXTREL\00", align 1
@.str.3 = private unnamed_addr constant [9 x i8] c"BIND_NOW\00", align 1
@.str.4 = private unnamed_addr constant [11 x i8] c"STATIC_TLS\00", align 1
@.str.5 = private unnamed_addr constant [8 x i8] c"unknown\00", align 1
@.str.6 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @print_dynamic_flags to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @print_dynamic_flags(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i32 1, i32* %3, align 4
  br label %5

5:                                                ; preds = %43, %1
  %6 = load i32, i32* %2, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %44

8:                                                ; preds = %5
  %9 = load i32, i32* %2, align 4
  %10 = load i32, i32* %2, align 4
  %11 = sub nsw i32 0, %10
  %12 = and i32 %9, %11
  store i32 %12, i32* %4, align 4
  %13 = load i32, i32* %4, align 4
  %14 = xor i32 %13, -1
  %15 = load i32, i32* %2, align 4
  %16 = and i32 %15, %14
  store i32 %16, i32* %2, align 4
  %17 = load i32, i32* %3, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %8
  store i32 0, i32* %3, align 4
  br label %23

20:                                               ; preds = %8
  %21 = load i32, i32* @stdout, align 4
  %22 = call i32 @putc(i8 signext 32, i32 %21)
  br label %23

23:                                               ; preds = %20, %19
  %24 = load i32, i32* %4, align 4
  switch i32 %24, label %40 [
    i32 131, label %25
    i32 129, label %28
    i32 128, label %31
    i32 132, label %34
    i32 130, label %37
  ]

25:                                               ; preds = %23
  %26 = load i32, i32* @stdout, align 4
  %27 = call i32 @fputs(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i32 %26)
  br label %43

28:                                               ; preds = %23
  %29 = load i32, i32* @stdout, align 4
  %30 = call i32 @fputs(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i32 %29)
  br label %43

31:                                               ; preds = %23
  %32 = load i32, i32* @stdout, align 4
  %33 = call i32 @fputs(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.2, i64 0, i64 0), i32 %32)
  br label %43

34:                                               ; preds = %23
  %35 = load i32, i32* @stdout, align 4
  %36 = call i32 @fputs(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.3, i64 0, i64 0), i32 %35)
  br label %43

37:                                               ; preds = %23
  %38 = load i32, i32* @stdout, align 4
  %39 = call i32 @fputs(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.4, i64 0, i64 0), i32 %38)
  br label %43

40:                                               ; preds = %23
  %41 = load i32, i32* @stdout, align 4
  %42 = call i32 @fputs(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.5, i64 0, i64 0), i32 %41)
  br label %43

43:                                               ; preds = %40, %37, %34, %31, %28, %25
  br label %5

44:                                               ; preds = %5
  %45 = call i32 @puts(i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.6, i64 0, i64 0))
  ret void
}

declare dso_local i32 @putc(i8 signext, i32) #1

declare dso_local i32 @fputs(i8*, i32) #1

declare dso_local i32 @puts(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
